# shp-converter

./: .gitignore  Dockerfile  README.md  pyproject.toml
shp_converter/: __init__.py  __main__.py  check.py  cli.py  crs.py  geojson_writer.py  geometry.py
test-data/ge/: CAD_LIMITE_CANTON.dbf  CAD_LIMITE_CANTON.shp  CAD_LIMITE_CANTON.shx
test-data/vd/: LAD_GEN_CANTON.dbf  LAD_GEN_CANTON.shp  LAD_GEN_CANTON.shx
tests/: test_converter.py
